--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <body><!-- the body element is where everything we will see on the page will go -->
 
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="red">
+      <div id="orange">
+        <div id="yellow">
+          <div id="green">
+            <div id="blue">
+              <div id="indigo">
+                <div id="violet" </div> <!-- the grandest child div -->
+              </div id="indigo">
+            </div id="blue">
+          </div id="green">
+        </div id="yellow">
+      </div id="orange">
+    <!--</div id="red">-->
 
   </body>
 
